# rentcar-pipeline-airbyte-snowflake-dbt-airflow-astro

./: Dockerfile  README.md  dbt_requirements.txt  requirements.txt
.astro/: config.yaml
dags/: airbyte_dag.py  dbt_dag.py  generate_data_dag.py  test_conn_dag.py  test_env_var.py
dags/dbt/rentcar/: .user.yml  README.md  dbt_project.yml  profiles.yml
dags/dbt/rentcar/models/marts/maintenance_analytics/: dim_date_maintenance.sql  dim_vehicle_maintenance.sql  fact_maintenance.sql  maintenance.yml
dags/dbt/rentcar/models/marts/rating_analytics/: dim_date_rating.sql  dim_driver_rating.sql  dim_user_rating.sql  fact_rating.sql  ratings.yml
dags/dbt/rentcar/models/marts/ride_analytics/: dim_country.sql  (+6 more)
dags/dbt/rentcar/models/silver/: silver.yml  silver_countries.sql  silver_drivers.sql  silver_maintenance.sql  silver_ratings.sql  silver_trips.sql  silver_users.sql  silver_vehicles.sql
dags/dbt/rentcar/models/stagging/: stagging.yml  stg_cities.sql  stg_countries.sql  stg_drivers.sql  stg_maintenance.sql  stg_ratings.sql  stg_trips.sql  stg_users.sql  stg_vehicles.sql
dags/dbt/rentcar/rentcar/: pyproject.toml  setup.py
dags/dbt/rentcar/rentcar/rentcar/: airbyte.py  assets.py  constants.py  definitions.py  project.py  resources.py  schedules.py
dags/dbt/rentcar/rentcar/rentcar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dags/generate_data/: create_data_mongo.py  create_index_mongo.py  models_mongo.py  update_drivers_status.py
dags/src/generate_data/: cities_data.json  create_data_mongo.py  generate_data_dag.py  models_mongo.py  update_drivers_status.py
